# asya-chat-ui

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  package.json  pnpm-lock.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0836e1c65b03_super_admin_org_models.py  0f2d7b4c3a11_chat_is_deleted.py  1b7f2c3d4e5f_chat_model_context_length.py  2c8d5e1a7f6b_user_profile_fields.py  3f4a2c9d7b6e_chat_model_image_capabilities.py  4b1d3e1c0f6b_org_provider_configs.py  526eeeb8086a_add_config_json_to_org_provider_configs.py  5c91a19f6f2b_org_status_fields.py  6b9f2f3a1c7d_chat_message_branches.py  6d7c9a2b1f45_org_web_tools_settings.py  7a2f2f1b7d1e_chat_message_model_id.py  8b4f1a2e9c7d_chat_message_sources.py  8e2b0b1f6f2c_usage_token_breakdown.py  95f4e4dd3efb_init.py  9a1b2c3d4e5f_org_oidc_and_user_auth_provider.py  9c1f2a7b0d3e_chat_message_attachments.py  a7b8c9d0e1f2_api_keys.py  b2c4d6e7f8a9_chat_model_reasoning_effort.py  c4e8a1b2c3d4_usage_image_metadata.py  c7d8e9f0a1b2_chat_generation_tasks.py  d1a2b3c4d5e6_org_exec_settings.py  d8e9f0a1b2c3_merge_heads.py  e2f3a4b5c6d7_org_exec_policy.py  f1c2d3e4f5a6_drop_exec_enabled.py  f2a3b4c5d6e7_password_resets.py  f3b4c5d6e7f8_chat_model_order.py
backend/app/: main.py
backend/app/api/: api_keys.py  auth.py  chats.py  deps.py  models.py  openai_compat.py  orgs.py  router.py  usage.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  wait_for_db.py
backend/executor/: Dockerfile  requirements.txt
nginx/: Dockerfile  (+1 more)
(+60 files in other folders)
